--- a/templates/base.html
+++ b/templates/base.html
@@ -6,42 +6,20 @@
     <title>{{ template_data.title|default:"Movies Store" }}</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <!-- Google Fonts: Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
 </head>
 <body>
-
-    <!-- Header / Content Block -->
-     <header>
-        <nav>
-            <ul>
-
-                <li><a href="">Home</a></li>
-                <li><a href="">About us</a></li>
-
-                <li><a href=""><i class="fa-solid fa-house-user"></i>Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-
-                <li><a href="">Movies</a></li>
-                <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
-            </ul>
 
     <!--Our Header section -->
     <header>
@@ -67,20 +45,19 @@
                     </div>
                 </div>
             </div>
-
         </nav>
     </header>
 
-    <!--This is the end of our Header Section -->
-    <!-- Main Content we will inherit our children pages here (they will be injected here)-->
+    <!-- Main Content -->
     <main>
         {% block content %}
         {% endblock content %}
     </main>
 
-    <!-- Our Footer Section-->
+    <!-- Footer Section -->
     <footer>
 
+        <!-- Main Footer -->
         <section class="p-3 ms-footer d-none d-md-block mt">
             <div class="container">
                 <div class="row mt-3 text-white">
@@ -123,7 +100,7 @@
         <!-- Bottom Footer -->
         <section class="p-3 ms-footer-bottom bg-dark">
             <div class="container d-flex justify-content-between">
-                <!-- Developer Credit Section -->
+                <!-- Developer Credit -->
                 <div class="me-5 text-white">
                     <span>
                         Designed & Developed by
@@ -131,42 +108,42 @@
                     </span>
                 </div>
 
-                <!-- Copyright Section -->
+                <!-- Copyright -->
                 <div class="text-white">
                     <span>© 2025 Movies Store. All Rights Reserved.</span>
                 </div>
+            </div>
+        </section>
 
+        <!-- Social Media & Footer Links -->
         <div class="footer_cont">
             <div class="socialmedia_icons">
-                <a href="" class = "icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="" class = "icon"><i class="fa-brands fa-facebook"></i></a>
-                <a href="" class = "icon"><i class="fa-brands fa-square-x-twitter"></i></a>
-                <a href="" class = "icon"><i class="fa-brands fa-youtube"></i></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="footer_nav">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="{% url 'home:about' %}">About Us</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Movies</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Movies</a></li>
                 </ul>
-
             </div>
+
             <div class="container mt-3">
-                <!-- Footer Links Section -->
                 <div class="d-flex justify-content-center">
-                    <a href="/privacy-policy" class="text-white text-decoration-none mx-3">Privacy Policy</a>
+                    <a href="{% url 'home:privacy_policy' %}" class="text-white text-decoration-none mx-3">Privacy Policy</a>
                     <a href="/terms-and-conditions" class="text-white text-decoration-none mx-3">Terms & Conditions</a>
                     <a href="/contact-us" class="text-white text-decoration-none mx-3">Contact Us</a>
                 </div>
             </div>
-        </section>
+        </div>
 
     </footer>
 
-    <!-- Ending of our Footer Section-->
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
