Style: Make lower footer font consistent and content evenly spread

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,15 +106,17 @@
                     <a href="#" class="text-white-50 text-decoration-none mx-2 small">Movies</a>
                 </div>
             </div>
-            <div class="row border-top border-secondary pt-3 mt-3">
-                <div class="col-md-6 small">
-                    Designed & Developed by <a href="https://www.scitt.tech.it" target="_blank" class="text-white text-decoration-none">SCITT Cohort 2025</a>
+            <div class="row border-top border-secondary pt-3 mt-3 small" style="font-size: 0.92em;">
+                <div class="col-md-4 d-flex align-items-center justify-content-md-start justify-content-center mb-2 mb-md-0">
+                    <span>Designed & Developed by <a href="https://www.scitt.tech.it" target="_blank" class="text-white text-decoration-none">SCITT Cohort 2025</a></span>
                 </div>
-                <div class="col-md-6 text-md-end small">
+                <div class="col-md-4 d-flex align-items-center justify-content-center mb-2 mb-md-0">
                     <a href="{% url 'accounts:privacy_policy' %}" class="text-white-50 text-decoration-none mx-2">Privacy Policy</a>
                     <a href="/terms-and-conditions" class="text-white-50 text-decoration-none mx-2">Terms & Conditions</a>
                     <a href="/contact-us" class="text-white-50 text-decoration-none mx-2">Contact Us</a>
-                    <span class="d-block d-md-inline">© 2025 Movies Store. All Rights Reserved.</span>
+                </div>
+                <div class="col-md-4 d-flex align-items-center justify-content-md-end justify-content-center">
+                    <span>© 2025 Movies Store. All Rights Reserved.</span>
                 </div>
             </div>
         </div>
