--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="{% url 'home:about' %}">About</a>
                         <a class="nav-link" href="#">Contact</a>
-                        <a class="nav-link" href="#">Cart</a>
+                        <a class="nav-link" href="{% url 'cart:cart' %}">Cart</a>
                         <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         <li><a class="nav-link px-0 text-white-50" href="{% url 'home:about' %}">About</a></li>
                         <li><a class="nav-link px-0 text-white-50" href="#">Movies</a></li>
                         <li><a class="nav-link px-0 text-white-50" href="#">Contact</a></li>
-                        <li><a class="nav-link px-0 text-white-50" href="#">Cart</a></li>
+                        <li><a class="nav-link px-0 text-white-50" href="{% url 'cart:cart' %}">Cart</a></li>
                         <li><a class="nav-link px-0 text-white-50" href="{% url 'accounts:login' %}">Login</a></li>
                     </ul>
                 </div>
@@ -103,7 +103,7 @@
                     <a href="/" class="text-white-50 text-decoration-none mx-2 small">Home</a>
                     <a href="{% url 'home:about' %}" class="text-white-50 text-decoration-none mx-2 small">About Us</a>
                     <a href="#" class="text-white-50 text-decoration-none mx-2 small">Contact</a>
-                    <a href="#" class="text-white-50 text-decoration-none mx-2 small">Movies</a>
+                    <a href="{% url 'cart:cart' %}" class="text-white-50 text-decoration-none mx-2 small">Cart</a>
                 </div>
             </div>
             <div class="row border-top border-secondary pt-3 mt-3 small" style="font-size: 0.92em;">
