--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,7 +187,7 @@ footer {
             text-align: center;
         }
 
-/* Copyright */
+/* Our Copyright styles */
 .copyright p {
     text-align: center;
     color: white;
