Created movies page

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <!--Our Header section -->
+    <!--Our Header section shared through out the app -->
     <header>
         <nav class="p-3 navbar navbar-dark bg-dark navbar-expand-lg">
             <div class="container">
@@ -54,7 +54,7 @@
         {% endblock content %}
     </main>
 
-    <!-- Footer Section -->
+    <!-- Footer Section - shared through out the app -->
     <footer class="bg-dark text-white pt-4">
         <div class="container">
             <div class="row">
