--- a/movies/templates/movies/movies.html
+++ b/movies/templates/movies/movies.html
@@ -1,33 +1,33 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-
-<h1>List of Movies</h1>
-<hr/>
 
 <div class="p-3">
     <div class="container">
         <div class="row mt-3">
+            <div class="col mx-auto mb-3">
+                <h2>List of Movies</h2>
+                <hr />
+            </div>
+        </div>
+
         <div class="row">
-            <ul>
-                 {% for movie in template_data.movies %}
-                 <img src="{% static 'images/about.jpg'%}" alt="#">
-                <li>
-                    <h2>
-                        {{movie.name}} 
-                    </h2>
-                </li>
-                 <l1>
-                    <h2>{{movie.description}}</h2>
-                </l1>
-                <l1>
-                    <h2>{{movie.price}}</h2>
-                </l1>
-                 {% endfor %}
-            </ul>
+            {% for movie in template_data.movies %}
+            <div class="col-md-4 col-lg-3 mb-2">
+                <div class="p-2 card align-items-center pt-4">
+                    <img src="{% static 'img/about.jpg' %}" class="card-img-top rounded mb-2" alt="Movie Image">
+
+                    <div class="card-body text-center">
+                        <h5 class="card-title">{{ movie.name }}</h5>
+                        <p class="card-text">{{ movie.description }}</p>
+                        <p class="card-text"><strong>{{ movie.price }}</strong></p>
+                        <a href="{% url 'movies:movies.show' id=movie.id %}" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
-    </div>
 </div>
+
 {% endblock content %}
