Updated show movies template

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="{% url 'home:about' %}">About</a>
+                        <a class="nav-link" href="{% url 'movies:index' %}">Movies</a>
                         <a class="nav-link" href="#">Contact</a>
                         <a class="nav-link" href="{% url 'cart:cart' %}">Cart</a>
                         <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
