--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -15,13 +15,13 @@
             {% for movie in template_data.movies %}
             <div class="col-md-4 col-lg-3 mb-2">
                 <div class="p-2 card align-items-center pt-4">
-                    <img src="{% static 'img/about.jpg' %}" class="card-img-top rounded mb-2" alt="Movie Image">
+                    <img src="{% static 'images/about.jpg' %}" class="card-img-top rounded mb-2" alt="Movie Image">
 
                     <div class="card-body text-center">
                         <h5 class="card-title">{{ movie.name }}</h5>
                         <p class="card-text">{{ movie.description }}</p>
                         <p class="card-text"><strong>{{ movie.price }}</strong></p>
-                        <a href="{% url 'movies:movies.show' id=movie.id %}" class="btn btn-primary">View Details</a>
+                        <a href="{% url 'movies:show' id=movie.id %}" class="btn bg-dark text-white">View Details</a>
                     </div>
                 </div>
             </div>
