--- a/movies/templates/movies/show.html
+++ b/movies/templates/movies/show.html
@@ -17,7 +17,7 @@
                 <p><strong>Price:</strong></p>
                 <p>{{ template_data.movie.price }}</p>
 
-                <a href="{% url 'movies:movies.index' %}" class="btn btn-secondary mt-3">Back to Movies</a>
+                <a href="{% url 'movies:index' %}" class="btn btn-secondary mt-3">Back to Movies</a>
             </div>
         </div>
     </div>
