privacy policy and contact us functionality

--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -13,7 +13,7 @@
 <ul>
     <li>info@scitt.tech.it</li>
     <li>Phone: +123 456 7890</li>
-    <li>Social media</li>
+    <li><strong>social media</strong><br>SCITT TECHNOLOGIES</li>
     <li>Address: 123 Cinema Lane, MovieTown, MT 56789</li>
     <li>website </li>
     <li>Working Hours: Monday – Friday | 9:00 AM – 5:00 PM (UTC)</li>
